--- a/index.html
+++ b/index.html
@@ -3,21 +3,51 @@
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
 layout: home
+rails_url: https://rubyonrails.org/
+javascript_url: https://developer.mozilla.org/en-US/docs/Web/JavaScript
+react_url: https://reactjs.org/
+busrate_url: http://bit.ly/busrate_2Uf4HXu
+
+skills:
+  - Ruby
+  - Rails
+  - JavaScript
+  - React
+  - React Router
+  - Redux
+  - MobX
+  - HTML
+  - CSS
+  - CSS Flexbox
+  - CSS Grid
+  - Git
+  - Github
+  - Bitbucket
+  - AWS S3
+  - AWS Elastic Beanstalk
+  - Google Firebase
+  - Sinatra
+  - jQuery
+  - Salesforce.com
+  - Liquid
+  - Jekyll
+  - Shopify
 ---
 
-<h1>Hi!</h1>
+<div class="big-sentence">Hi!</div>
 
 <div class="big-sentence">
-I'm Jeremy Lenz, NYC-based full stack web developer.
+I'm <a href="{{ site.resume-link }}">Jeremy Lenz</a>, NYC-based full stack web developer.
 </div>
 <div class="big-sentence">
-I have experience in <a href="">Ruby on Rails</a>, <a>JavaScript</a>, and <a>React</a>.  Also a bit of Liquid (Shopify/Jekyll).
+I have experience in <a href="{{ page.rails_url }}">Ruby on Rails</a>, <a href="{{ page.javascript_url }}">JavaScript</a>, and <a href="{{ page.react_url }}">React</a>.  Also a bit of Liquid (Shopify/Jekyll).
 </div>
 <div class="big-sentence">
 My other skills are:
+  {% include skills.html skills=page.skills %}
 </div>
 <div class='big-sentence'>
-My recent personal project is called <a>BusRate</a>.
+My recent personal project is called <a href="{{ page.busrate_url }}">BusRate</a>.
 </div>
 <div class="big-sentence">
 Educational background: jazz piano.  Passion for getting it right and doing work I can be proud of.
