fix resume link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ skills:
 <div class="big-sentence">Hi!</div>
 
 <div class="big-sentence">
-I'm <a href="{{ site.resume-link }}">Jeremy Lenz</a>, NYC-based full stack web developer.
+I'm <a href="{{ site.resume_link }}">Jeremy Lenz</a>, NYC-based full stack web developer.
 </div>
 <div class="big-sentence">
 I have experience in <a href="{{ page.rails_url }}">Ruby on Rails</a>, <a href="{{ page.javascript_url }}">JavaScript</a>, and <a href="{{ page.react_url }}">React</a>.  Also a bit of Liquid (Shopify/Jekyll).
